--- a/css/custom.css
+++ b/css/custom.css
@@ -55,16 +55,16 @@ form {
  }
  @media screen and (max-width: 360px) {
     #sendBtn {
-        margin-left: 13%;
+         margin-left: 89px !important;
+        margin-top: 20px; 
     }
-
     #resetBtn {
-        margin-right: 10%;
+         margin-left: 20px !important; 
     }
 
     .container {
-        width: 470px;
-        margin-left: -15%;
+        width: 500px;
+        margin-left: -20%;
 
     }
  }
